<resources>
    <string name="app_name">CareLine</string>
    <!-- strings for get started 1-->
    <string name="care_line">CARE LINE</string>
    <string name="ignorer">Ignorer</string>
    <string name="d_couvrez_l">Découvrez les Meilleurs Médecins</string>
    <string name="dsc">illustration</string>
    <string name="une_quipe_d">Une équipe de médecins professionnels de nombreux hôpitaux vous aide à vivre la meilleure expérience de soins de santé où que vous soyez.</string>
    <string name="next">Suivant</string>
    <!-- strings for  get started 2-->
    <string name="r_servez_pl">Réservez / Planifiez vos rendez-vous</string>
    <string name="vous_souhai">Vous souhaitez prendre rendez-vous ? \nPlus besoin de vous déplacer, réservez et gérez vos rendez-vous depuis chez vous.</string>
    <!-- strings for  get started 3-->
    <string name="g_rez_votre">Gérez votre santé</string>
    <string name="g_rez">Gérez votre santé en ligne. Obtenez de l\'aide \nsur la façon d\'amé9liorer votre santé en ligne .</string>
    <string name="start">Commencez</string>
    <!-- strings for login-->
    <string name="mail">E-mail...</string>
    <string name="mdp">Mot De Passe...</string>
    <string name="connect">Se Connecter</string>
    <string name="nouveau_mem">Nouveau Membre ?</string>
    <string name="insc">Inscrivez-vous</string>
    <!-- strings for register-->
    <string name="naus">Nom d\'Utilisateur...</string>
    <string name="tel">Nº Tel...</string>
    <string name="tapp">Retapper le Mot De Passe</string>
    <string name="log">Connectez-vous</string>
    <string name="read">J\'ai lu et j\'accepte les termes et conditions</string>
    <string name="acc">Vous avez déja un compte ?</string>
    <string name="sins">S\'inscrire</string>
    <!-- strings for welcome-->
    <string name="wel">Welcome</string>
    <!-- strings for home-->
    <string name="accueil">Accueil</string>
    <string name="hey">Bonjour,</string>
    <string name="comment">Comment vous sentez-vous aujourd\'hui ?</string>
    <string name="service">Nos Services</string>
    <string name="rechercher_">Rechercher des médecins</string>
    <string name="rendez_vous">Rendez-vous</string>
    <string name="notificatio">Notifications</string>
    <string name="profile">Profile</string>
    <string name="welcome_sar">Welcome Sara</string>
    <string name="information">Informations</string>
    <string name="partager">Partager</string>
    <string name="se_d_connec">Se Déconnecter</string>
    <string name="sara">Sara El Aboudi</string>
    <string name="user">Sousou</string>
    <string name="reserv">Réservation</string>
    <string name="dr_">Dr.</string>
    <string name="location">Location</string>
    <string name="votre_plain">Votre plainte</string>
    <string name="tapez_votre">Tapez votre plainte ici...</string>
    <string name="rv">Réserver</string>
    <string name="fullname">Nom Complet : </string>
    <string name="location_doc">Location : </string>
    <string name="looc">140, rue El Farouki Errahali, Sidi Maarouf IV</string>
    <string name="spec">Spécialité : </string>
    <string name="sp_doc">Dermatologie</string>
    <string name="stat">Statut : </string>
    <string name="st_doc">Online</string>
</resources>