<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/white"
    android:layout_height="match_parent"
    tools:context=".Home">

    <TextView
        android:id="@+id/acceuil"
        android:layout_width="100dp"
        android:layout_height="32dp"
        android:layout_marginTop="20dp"
        android:text="@string/accueil"
        android:textAppearance="@style/accueil"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/hey"
        android:text="@string/hey"
        android:textAppearance="@style/hey"
        app:layout_constraintTop_toBottomOf="@+id/acceuil"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_width="100dp"
        android:layout_height="40dp"/>

    <TextView
        android:id="@+id/comment"
        android:text="@string/comment"
        android:textAppearance="@style/comment"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/hey"
        android:layout_width="340dp"
        android:layout_height="40dp"/>

    <TextView
        android:id="@+id/service"
        android:text="@string/service"
        android:textAppearance="@style/service"
        app:layout_constraintTop_toBottomOf="@+id/comment"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="10dp"
        android:layout_width="130dp"
        android:layout_height="40dp"/>

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="307dp"
    android:layout_height="288dp"
    app:layout_constraintTop_toBottomOf="@+id/service"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    android:layout_marginTop="80dp"
    android:background="@drawable/services">

</androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>