<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/white"
    android:layout_height="match_parent"
    tools:context=".rendez_vous">

    <EditText
        android:id="@+id/search"
        android:layout_width="320dp"
        android:layout_height="28dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/search"
        android:gravity="center"
        android:hint="@string/rechercher_"
        android:importantForAutofill="no"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rendvous"
        tools:ignore="TouchTargetSizeCheck,TextContrastCheck" />
    
    <TextView
        android:id="@+id/rendvous"
        android:layout_width="150dp"
        android:layout_height="32dp"
        android:layout_marginTop="20dp"
        android:text="@string/rendez_vous"
        android:textAppearance="@style/rendez_vous"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextContrastCheck" />


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/doctorList"
        android:layout_width="380dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@+id/search"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/nav"
        android:background="@drawable/nav"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_width="match_parent"
        android:layout_height="50dp">

        <ImageView
            android:id="@+id/hom"
            android:layout_width="25dp"
            android:layout_height="40dp"
            android:layout_marginStart="30dp"
            android:contentDescription="@string/partager"
            android:src="@drawable/home_"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="ImageContrastCheck" />

        <ImageView
            android:id="@+id/cal"
            android:layout_width="25dp"
            android:layout_height="40dp"
            android:layout_marginStart="100dp"
            android:src="@drawable/calender"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@id/hom"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="ImageContrastCheck"
            android:contentDescription="@string/partager" />

        <ImageView
            android:id="@+id/not"
            android:layout_width="25dp"
            android:layout_height="40dp"
            android:layout_marginStart="100dp"
            android:src="@drawable/notification_"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@id/cal"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="ImageContrastCheck"
            android:contentDescription="@string/partager" />
        <ImageView
            android:id="@+id/per"
            app:layout_constraintStart_toStartOf="@id/not"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginStart="100dp"
            android:src="@drawable/shape_"
            android:layout_width="25dp"
            android:layout_height="40dp"
            android:contentDescription="@string/partager" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>