<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/white"
    android:layout_height="match_parent"
    tools:context=".profil">

    <TextView
        android:id="@+id/profil"
        android:layout_width="80dp"
        android:layout_height="32dp"
        android:layout_marginTop="20dp"
        android:text="@string/profile"
        android:textAppearance="@style/profile"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextContrastCheck" />

    <ImageView
        android:id="@+id/avatar"
        android:src="@drawable/avatar"
        android:layout_marginEnd="10dp"
        app:layout_constraintTop_toBottomOf="@+id/profil"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="70dp"
        android:contentDescription="@string/partager"
        android:layout_width="63dp"
        android:layout_height="54dp"/>

    <Button
        android:id="@+id/bar"
        android:layout_width="170dp"
        android:layout_height="5dp"
        android:layout_marginTop="130dp"
        android:background="@drawable/bar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profil"
        tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck">
    </Button>

    <TextView
        android:id="@+id/welcom"
        android:text="@string/welcome_sar"
        app:layout_constraintStart_toStartOf="parent"
        android:textAppearance="@style/welcome_sar"
        android:layout_marginStart="20dp"
        app:layout_constraintBaseline_toBaselineOf="@+id/bar"
        android:layout_width="150dp"
        android:layout_height="30dp"/>


    <TextView
        android:id="@+id/infor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bar"
        android:text="@string/information"
        android:layout_marginEnd="120dp"
        android:textAppearance="@style/information"
        android:layout_marginTop="170dp"
        android:layout_width="120dp"
        android:layout_height="32dp"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/infos"
        android:layout_width="40dp"
        app:layout_constraintTop_toBottomOf="@+id/welcom"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="80dp"
        android:layout_marginTop="150dp"
        android:background="@drawable/circle"
        android:layout_height="40dp">

        <ImageView
            android:id="@+id/pro"
            android:src="@drawable/shape_"
            android:layout_width="40dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/partager"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_height="20dp"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/share"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/infor"
        android:text="@string/partager"
        android:layout_marginEnd="120dp"
        android:textAppearance="@style/partager"
        android:layout_marginTop="70dp"
        android:layout_width="120dp"
        android:layout_height="32dp"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/partager"
        android:layout_width="40dp"
        app:layout_constraintTop_toBottomOf="@+id/infos"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="80dp"
        android:layout_marginTop="60dp"
        android:background="@drawable/circle"
        android:layout_height="40dp">

        <ImageView
            android:id="@+id/par"
            android:layout_width="30dp"
            android:layout_height="15dp"
            android:contentDescription="@string/partager"
            android:src="@drawable/share"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="ImageContrastCheck" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/diis"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/share"
        android:text="@string/se_d_connec"
        android:layout_marginEnd="100dp"
        android:textAppearance="@style/se_d_connec"
        android:layout_marginTop="70dp"
        android:layout_width="140dp"
        android:layout_height="32dp"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/disc"
        android:layout_width="40dp"
        app:layout_constraintTop_toBottomOf="@+id/partager"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="80dp"
        android:layout_marginTop="60dp"
        android:background="@drawable/circle"
        android:layout_height="40dp">

        <ImageView
            android:id="@+id/di"
            android:layout_width="35dp"
            android:layout_height="15dp"
            android:contentDescription="@string/partager"
            android:src="@drawable/logout"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="ImageContrastCheck" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/nav"
        android:background="@drawable/nav"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_width="match_parent"
        android:layout_height="50dp">

        <ImageView
            android:id="@+id/hom"
            android:layout_width="25dp"
            android:layout_height="40dp"
            android:layout_marginStart="30dp"
            android:contentDescription="@string/partager"
            android:src="@drawable/home_"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="ImageContrastCheck" />

        <ImageView
            android:id="@+id/cal"
            android:layout_width="25dp"
            android:layout_height="40dp"
            android:layout_marginStart="100dp"
            android:contentDescription="@string/partager"
            android:src="@drawable/calender_"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@id/hom"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="ImageContrastCheck" />

        <ImageView
            android:id="@+id/not"
            android:layout_width="25dp"
            android:layout_height="40dp"
            android:contentDescription="@string/partager"
            android:layout_marginStart="100dp"
            android:src="@drawable/notification_"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@id/cal"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="ImageContrastCheck"/>

        <ImageView
            android:id="@+id/per"
            android:layout_width="25dp"
            android:layout_height="40dp"
            android:layout_marginStart="100dp"
            android:src="@drawable/shape"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@id/not"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="ImageContrastCheck"
            android:contentDescription="@string/partager" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>